# torch-read-modify-write

./: .autoresearch_repo  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLEANUP_PLAN.md  Makefile  PROGRESS.md  README.md  TESTS.md  bench_autoresearch.py  bench_perf.py  extract_repo.py  gen_llmc_h5.py  gen_nanogpt_h5.py  h5_to_kbox.py  h5_to_pt.py  pyproject.toml  run_export.py  run_tests.py  run_triton.py  test.py  test_fixes.py  test_models.py  validate_autoresearch.py
.autoresearch_optim_cache/: GPT_07554748d291_2a_train_aten.py
docs/: ARCHITECTURE.md  DETAILED_REPORT.md  EXTRACT_MODIFY_RUN.md  IMPROVEMENTS.md  INDUCTOR_ENRICHMENT_REFACTOR.md  KERNELBOX_ITERATE.md  KERNEL_OPTIMIZATION_WORKFLOW.md  NEXT_PHASE.md  PERF_BENCHMARK.md  PLAN_HIERARCHICAL_UNIQUIFY.md  PLAN_UNIFIED_UNIQUIFY.md  WEAKNESSES.md  nanogpt_triton_kernels.html
examples/: 01_mnist_simple.py  02_nanogpt.py  03_one_liner.py  04_aten_export.py  nanochat_auto_install_demo.py  nanochat_install_demo.py  test_auto_install.py
kernelbox/: CLAUDE.md  GUIDE.md  Makefile  README.md
recipes/: autoresearch_wrapper.py  llmc_gpt2.py  modded_nanogpt_wrapper.py  nanochat_wrapper.py  nanogpt.py  template.py
scripts/: apply_optimizations.py  autoresearch_capture.py  autoresearch_modify_validate.py  autoresearch_optimize_loop.py  bench_aten_direct.py  capture_autoresearch.py  capture_modded_nanogpt.py  capture_nanochat.py  capture_nanogpt.py
test_repo/: train.py
tests/: test_aten_op_coverage.py  test_aten_to_cuda.py  test_auto_install.py  test_autoresearch_e2e.py  test_cuda_inline.py  test_explain.py  (+14 more)
(+368 files in other folders)
